--- a/frontend/src/app/layout/mails/mail-list/mail-list.component.html
+++ b/frontend/src/app/layout/mails/mail-list/mail-list.component.html
@@ -8,6 +8,10 @@
       <p class="page-subtitle">View the latest updates and notifications</p>
     </div>
     <div class="header-actions">
+      <button mat-raised-button color="primary"  class="compose-button" (click)="openCompose()">
+        <mat-icon>edit</mat-icon>
+        Compose
+      </button>
       <button mat-icon-button matTooltip="Refresh">
         <mat-icon>refresh</mat-icon>
       </button>
