--- a/frontend/src/app/layout/mails/mail-view/mail-view.component.html
+++ b/frontend/src/app/layout/mails/mail-view/mail-view.component.html
@@ -4,6 +4,10 @@
       <mat-icon>arrow_back</mat-icon>
       Back to Inbox
     </button>
+    <button mat-raised-button color="primary" class="reply-button" (click)="reply()">
+      <mat-icon>reply</mat-icon>
+      Reply
+    </button>
   </div>
 
   <mat-card class="mail-card modern-card">
