--- a/frontend/src/app/layout/mails/mail-view/mail-view.component.scss
+++ b/frontend/src/app/layout/mails/mail-view/mail-view.component.scss
@@ -8,6 +8,9 @@
 
 .mail-view-header {
   margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
 
   button {
     display: inline-flex;
